pom.xml исправлен.. возможно...